--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -10,7 +10,7 @@
 
 	#wrapper {
 		background-color: #212931;
-		background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/background.jpg");
+		background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/background.jpg.jpeg");
 		background-size: auto,								auto,														cover;
 		background-position: center,								center,														center center;
 		background-repeat: repeat,								no-repeat,													no-repeat;
