Changer le fonds

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3233,12 +3233,12 @@ input, select, textarea {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/background.jpg.jpeg");
-			background-size: auto,								auto,														cover;
-			background-position: center,								center,														center center;
-			background-repeat: repeat,								no-repeat,													no-repeat;
-			background-attachment: scroll,								scroll,														scroll;
+			background-color: #1f2a44;
+			background-image: none;
+			background-size: auto;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-attachment: scroll;
 			z-index: -1;
 		}
 
@@ -3318,8 +3318,8 @@ input, select, textarea {
 		}
 
 			.intro-avatar img {
-				width: 180px;
-				height: 180px;
+				width: 130px;
+				height: 130px;
 				border-radius: 50%;
 				object-fit: cover;
 				border: 4px solid rgba(255, 255, 255, 0.85);
