--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -9,12 +9,12 @@
 /* Wrapper */
 
 	#wrapper {
-		background-color: #212931;
-		background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/background.jpg.jpeg");
-		background-size: auto,								auto,														cover;
-		background-position: center,								center,														center center;
-		background-repeat: repeat,								no-repeat,													no-repeat;
-		background-attachment: fixed,								fixed,														fixed;
+		background-color: #1f2a44;
+		background-image: none;
+		background-size: auto;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-attachment: fixed;
 	}
 
 		#wrapper.fade-in:before {
